--- a/src/app/public/index.html
+++ b/src/app/public/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE HTML>
 <html>
-    <body>
+    <head>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+    </head>
+    <body style="padding: 20px;">
 	<p>
-	  <span id="main-status-span"></span>
+	  <h2 id="main-status-span"></h2>
 	</p>
-	<button id="rock-btn" class="btn btn-primary" type="submit">Rock</button>
-	<button id="paper-btn" class="btn btn-primary" type="submit">Paper</button>
-	<button id="scissors-btn" class="btn btn-primary" type="submit">Scissors</button>
-    <p>
-        <span id="round-status-span"></span>
-    </p>
 
     <p></p>
+    <table>
+        <tr>
+            <td colspan="2"><h2 id="round-status-span"></h2></td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button id="rock-btn" class="btn btn-primary" type="submit">Rock</button>
+                <button id="paper-btn" class="btn btn-primary" type="submit">Paper</button>
+                <button id="scissors-btn" class="btn btn-primary" type="submit">Scissors</button>
+            </td>
+        </tr>
+    </table>
 
-    <p>
-        <span id="my-score-span"></span>
-    </p>
-
-    <p>
-        <span id="other-player-score-span"></span>
-    </p>
+    <p></p>
+    <table border="1px solid black" cellpadding="10px;">
+        <tr>
+            <td><h1>You</h1></td>
+            <td><h1>Player 2</h1></td>
+        </tr>
+        <tr>
+            <td><h2 id="my-score-span"></h2></td>
+            <td><h2 id="other-player-score-span"></h2></td>
+        </tr>
+    </table>
 
 	<script src="js/app.js"></script>
 	</body>
